[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/AppearanceMenuConsole.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/wallLampDemo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/NetworkSetup.gd" type="Script" id=4]
[ext_resource path="res://Scenes/StartGame.tscn" type="PackedScene" id=5]

[sub_resource type="ProceduralSky" id=2]
sky_top_color = Color( 0.854902, 0.854902, 0.854902, 1 )
sky_horizon_color = Color( 0.384314, 0.94902, 0.937255, 1 )
sky_curve = 0.302722
sun_energy = 0.0

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
background_energy = 0.0
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0, 0, 0, 1 )
fog_depth_enabled = false
fog_depth_curve = 0.0346741
fog_transmit_curve = 0.0334929

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 1, 5 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="NetworkSetup" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -90.0
margin_right = 175.0
margin_bottom = 90.0

[node name="PlayerName" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_right = 350.0
margin_bottom = 24.0
text = "Player Name"

[node name="IpAddress" type="LineEdit" parent="NetworkSetup/VBoxContainer"]
margin_top = 28.0
margin_right = 350.0
margin_bottom = 52.0
text = "IP Address"

[node name="Host" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 56.0
margin_right = 350.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 60 )
text = "HOST"

[node name="Join" type="Button" parent="NetworkSetup/VBoxContainer"]
margin_top = 120.0
margin_right = 350.0
margin_bottom = 180.0
rect_min_size = Vector2( 0, 60 )
text = "JOIN"

[node name="CheckButton" type="CheckButton" parent="NetworkSetup/VBoxContainer"]
margin_top = 184.0
margin_right = 350.0
margin_bottom = 224.0
text = "Male(on)/Female(off)"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="PlayerPoints" type="CanvasLayer" parent="."]

[node name="PlayerPos1" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 5, 4 )

[node name="PlayerPos2" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, 2 )

[node name="PlayerPos3" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 5, 0 )

[node name="PlayerPos4" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 5, -2 )

[node name="PlayerPos5" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 5, -4 )

[node name="PlayerPos6" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -6 )

[node name="PlayerPos7" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 5, -4 )

[node name="PlayerPos8" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, -2 )

[node name="PlayerPos9" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 5, 0 )

[node name="PlayerPos10" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 5, 2 )

[node name="PlayerPos11" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 5, 4 )

[node name="PlayerPos12" type="Position3D" parent="PlayerPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 6 )

[node name="Players" type="CanvasLayer" parent="."]

[node name="Map" type="CanvasLayer" parent="."]

[node name="StartGame" parent="Map" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 13 )

[node name="Floor" type="StaticBody" parent="Map"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Floor"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Floor"]
width = 10.0
depth = 10.0

[node name="Roof Slats" type="CanvasLayer" parent="Map"]

[node name="Roof" type="StaticBody" parent="Map/Roof Slats"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Roof Slats/Roof"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Roof Slats/Roof"]
width = 10.0
depth = 10.0

[node name="Roof3" type="StaticBody" parent="Map/Roof Slats"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, -28 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Roof Slats/Roof3"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Roof Slats/Roof3"]
width = 10.0
depth = 10.0

[node name="Roof7" type="StaticBody" parent="Map/Roof Slats"]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 1, 0, 49, 30 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Roof Slats/Roof7"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Roof Slats/Roof7"]
width = 10.0
depth = 10.0

[node name="Floor2" type="StaticBody" parent="Map"]
transform = Transform( 10, 0, 0, 0, -4.37114e-08, -10, 0, 1, -4.37114e-07, 0, 0, 50 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Floor2"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Floor2"]
width = 10.0
depth = 10.0

[node name="Floor3" type="StaticBody" parent="Map"]
transform = Transform( 10, 0, 0, 0, -4.37114e-08, -10, 0, 1, -4.37114e-07, 0, 0, -50 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Floor3"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Floor3"]
width = 10.0
depth = 10.0

[node name="Floor4" type="StaticBody" parent="Map"]
transform = Transform( -4.37114e-07, -1, 0, 10, -4.37114e-08, 0, 0, 0, 10, 50, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Floor4"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Floor4"]
width = 10.0
depth = 10.0

[node name="Floor5" type="StaticBody" parent="Map"]
transform = Transform( -4.37114e-07, -1, 0, 10, -4.37114e-08, 0, 0, 0, 10, -50, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Map/Floor5"]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="Map/Floor5"]
width = 10.0
depth = 10.0

[node name="lamps" type="CanvasLayer" parent="Map"]

[node name="wallLampDemo" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, -39 )

[node name="wallLampDemo2" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, -10 )

[node name="wallLampDemo3" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, 18 )

[node name="wallLampDemo4" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49, 12, 40 )

[node name="wallLampDemo5" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, 40 )

[node name="wallLampDemo6" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, 11 )

[node name="wallLampDemo7" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, -17 )

[node name="wallLampDemo8" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -8.9407e-08, 0, 1, 0, 8.9407e-08, 0, -1, -49, 12, -39 )

[node name="wallLampDemo9" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -39.5, 12, -48.5 )

[node name="wallLampDemo10" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10.5, 12, -48.5 )

[node name="wallLampDemo11" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 17.5, 12, -48.5 )

[node name="wallLampDemo12" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 39.5, 12, -48.5 )

[node name="wallLampDemo13" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, 39.5, 12, 49.5 )

[node name="wallLampDemo14" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, 10.5, 12, 49.5 )

[node name="wallLampDemo15" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, -17.5, 12, 49.5 )

[node name="wallLampDemo16" parent="Map/lamps" instance=ExtResource( 3 )]
transform = Transform( 1.33118e-07, 0, -1, 0, 1, 0, 1, 0, 1.33118e-07, -39.5, 12, 49.5 )

[node name="DirectionalLight" type="DirectionalLight" parent="Map"]
transform = Transform( 1, 0, 0, 0, 0.0871558, 0.996195, 0, -0.996195, 0.0871558, 0, 65, 0 )
light_color = Color( 0.721569, 0.74902, 0.847059, 1 )
shadow_enabled = true

[node name="AppearanceMenuConsole" parent="Map" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 2, 9 )

[connection signal="text_changed" from="NetworkSetup/VBoxContainer/PlayerName" to="." method="_on_PlayerName_text_changed"]
[connection signal="text_changed" from="NetworkSetup/VBoxContainer/PlayerName" to="NetworkSetup" method="_on_PlayerName_text_changed"]
[connection signal="text_changed" from="NetworkSetup/VBoxContainer/IpAddress" to="NetworkSetup" method="_on_IpAddress_text_changed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Host" to="NetworkSetup" method="_on_Host_pressed"]
[connection signal="pressed" from="NetworkSetup/VBoxContainer/Join" to="NetworkSetup" method="_on_Join_pressed"]
[connection signal="toggled" from="NetworkSetup/VBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
